--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.varshney.accelerometer.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <TextView
+       android:layout_width="368dp"
+       android:layout_height="0dp"
+       android:layout_weight="1"
+       android:text="X"
+       android:textSize="40dp"
+       android:textAlignment="center"
+       android:id="@+id/tvX" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="368dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:text="Y"
+        android:textSize="40dp"
+        android:id="@+id/tvY" />
+
+    <TextView
+        android:layout_width="368dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:text="Z"
+        android:textSize="40dp"
+        android:id="@+id/tvZ" />
+</LinearLayout>
